Bug 187966 - crash when formatting floppy
Summary: crash when formatting floppy
Status: RESOLVED FIXED
Alias: None
Product: kfloppy
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Unknown
URL:
Keywords:
: 243930 261038 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-03-24 04:36 UTC by stevet
Modified: 2010-12-23 06:04 UTC (History)
8 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stevet 2009-03-24 04:36:14 UTC
Version:            (using KDE 4.1.3)
OS:                Linux
Installed from:    SuSE RPMs

crashes during floppy format. Idiotkeyworddemand is to bugzilla because just what keywords do you have to have for this?

The crash popped up with a list it said to copy in here, and this was the result of a signal 11:

Application: KFloppy (kfloppy), signal SIGSEGV
[?1034h(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[KCrash handler]
#5  0x00007f6c5b51ed79 in QObject::connect(QObject const*, char const*, QObject const*, char const*, Qt::ConnectionType) () from /usr/lib64/libQtCore.so.4
#6  0x0000000000408133 in _start ()
Comment 1 A. Spehr 2009-03-24 08:35:47 UTC
Actually, developers use the subject: lines to help them tell reports apart, not for that kind of keywords. 

What do the results of:

ls -l /dev/fd0

give you? And this happens every time? 

Thanks!
Comment 2 stevet 2009-03-25 04:38:12 UTC
Response is:

brw - rw ---- 1 root floppy 2, 0 MAR 16 20:40 /dev/fd0

And as for the KDE failure on format attempt, yes.

And if developers use the keywords to tell bugs apart, the reporting system is broken, because it would only allow me certain keywords, which from where I sit had nothing to do with the problem. I would have preferred "format floppy signal11 crash".
Comment 3 Michael Leupold 2009-03-26 12:22:18 UTC
Unfortunately the backtrace you reported is not usable due to many missing symbols. If possible, please install you distribution's debug packages (usually suffixed -dbg, see http://techbase.kde.org/Development/Tutorials/Debugging/How_to_create_useful_crash_reports).

Please also supply information which settings you used to format the floppy and which format programs are available (kfloppy says this in a list at the bottom of its window).

(OT: bug reporting is currently bugged. The keyword field should be "Summary" and allow you to enter a short description for your bug, not predefined values)
Comment 4 stevet 2009-03-27 05:21:13 UTC
Interesting. I have obtained a USB Floppy drive, and have installed the debug repository, getting the KDE3 & 4 kfloppy debug and installing that with the USB floppy support.

So, it can't handle the USB floppy drive for some reason, but now it can format the floppy attached to the M/Board.

Seems something is wrong, but I don't know what it was. Note that I am running a 64 bit SuSE 11.1 system. So with this, I guess this bug report should be closed as not recreatable.
Comment 5 A. Spehr 2009-03-27 05:50:21 UTC
"can't handle the usb floppy" ...what do you mean?
Comment 6 roland 2009-06-28 23:23:21 UTC
Sometimes it crashes and generates this in the crash file:

Application: KFloppy (kfloppy), signal SIGSEGV
0x00007f4a104abcb0 in nanosleep () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7f4a17487750 (LWP 10878))]

Thread 1 (Thread 0x7f4a17487750 (LWP 10878)):
[KCrash Handler]
#5  0x00007f4a16fd6d79 in QObject::connect(QObject const*, char const*, QObject const*, char const*, Qt::ConnectionType) () from /usr/lib64/libQtCore.so.4
#6  0x0000000000408133 in _start ()



Other times it generates this:


This backtrace appears to be of no use.
This is probably because your packages are built in a way which prevents creation of proper backtraces, or the stack frame was seriously corrupted in the crash.

[?1034h(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
0x00007f7b7f195cb0 in nanosleep () from /lib64/libc.so.6
[Current thread is 1 (Thread 0x7f7b86171750 (LWP 11018))]

Thread 1 (Thread 0x7f7b86171750 (LWP 11018)):
#0  0x00007f7b7f195cb0 in nanosleep () from /lib64/libc.so.6
#1  0x00007f7b7f195adc in sleep () from /lib64/libc.so.6
#2  0x00007f7b851bd54f in ?? () from /usr/lib64/libkdeui.so.5
#3  0x00007f7b851bdeaa in KCrash::defaultCrashHandler(int) () from /usr/lib64/libkdeui.so.5
#4  <signal handler called>
#5  0x0000000000000000 in ?? ()
#6  0x00007f7b85cc0d8e in QObject::connect(QObject const*, char const*, QObject const*, char const*, Qt::ConnectionType) () from /usr/lib64/libQtCore.so.4
#7  0x0000000000408133 in _start ()
Comment 7 Devin LaSalle 2009-08-02 03:10:37 UTC
I just got the following from the KDE Crash Handler on my Fedora 11 system. KFloppy appears to have crashed toward the end of the floppy formatting action.  I just copied all data below rather than attach.
============
A Fatal Error Occurred
The application KFloppy (kfloppy) crashed and caused the signal 11 (SIGSEGV).
Please help us improve the software you use by filing a report at http://bugs.kde.org. Useful details include how to reproduce the error, documents that were loaded, etc.

Please attach the following information to your bug report:

Application: KFloppy (kfloppy), signal SIGSEGV
[Current thread is 1 (Thread 0xb7ef7780 (LWP 2590))]

Thread 1 (Thread 0xb7ef7780 (LWP 2590)):
[KCrash Handler]
#6  0x0458bf70 in QObject::connect(QObject const*, char const*, QObject const*, char const*, Qt::ConnectionType) () from /usr/lib/libQtCore.so.4
#7  0x0804df74 in _start ()
Comment 8 Dave Kaye 2010-03-05 01:25:41 UTC
The crash with segment fault continues on KFloppy from KDE 4.3.4.  A more complete description of the fault, debug output and instances of occurrence can be found on the Novell openSUSE bug site, bugzilla.novell.com bug id 575584.  

A temporary workaround is to create a shell script calling the base Linux format and file system programs, then add the script to the menu system.
Comment 9 Christoph Feck 2010-06-08 01:49:11 UTC
SVN commit 1135705 by cfeck:

Fix crash when accessing empty action list

BUG: 187966
BUG: 206831


 M  +3 -3      format.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1135705
Comment 10 Christoph Feck 2010-06-08 01:50:14 UTC
SVN commit 1135706 by cfeck:

Fix crash when accessing empty action list (backport r1135705)

CCBUG: 187966
CCBUG: 206831


 M  +3 -3      format.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1135706
Comment 11 Christoph Feck 2010-07-21 20:19:48 UTC
*** Bug 243930 has been marked as a duplicate of this bug. ***
Comment 12 Christoph Feck 2010-12-23 06:04:36 UTC
*** Bug 261038 has been marked as a duplicate of this bug. ***