Fix crash when accessing empty action list

BUG: 187966
BUG: 206831

svn path=/trunk/KDE/kdeutils/kfloppy/; revision=1135705